# mage-c

./: CMakeLists.txt  main.c  test.c
glad/: glad.c  glad.h
includes/: allocMacros.h  appInfo.h  openglSetup.h
includes/array/: array.c  array.h
includes/circle/: circle.c  circle.h
includes/cube/: cube.c  cube.h
includes/glfw setup/: glfwSetup.c  glfwSetup.h
includes/iarray/: iarray.c  iarray.h
includes/mat4/: mat4.c  mat4.h
includes/point/: point.c  point.h
includes/shader/: loadShader.c  loadShader.h
includes/triangle/: triangle.c  triangle.h
includes/varray/: varray.c  varray.h
includes/vec4/: vec4.c  vec4.h
includes/vertex array/: vertexArray.c  vertexArray.h
shaders/: fs.frag  vs.vert
src/: globals.h  setup.c  src.c
